--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/interactive-supports-focus": "off",
         "prettier/prettier": "off",
-        "no-unused-vars": "warn",
+        "no-unused-vars": ["warn",{"args" : "none"}],
         "unused-imports/no-unused-vars": "warn",
         "unused-imports/no-unused-imports": "warn",
         "@typescript-eslint/no-unused-vars": [
